# Mbmbook

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  HOSTING.md  README.md  docker-compose.yml  pyproject.toml  start.bat
backend/: __init__.py  app.py  schemas.py  server.py
backend/api/: auth.py  cluster.py  kernels.py  notebooks.py  ws.py
backend/cluster/: head_node.py  scheduler.py  worker_node.py
backend/core/: config.py  database.py  security.py
backend/models/: __init__.py
backend/services/: cluster_manager.py  kernel_manager.py  kernel_registry.py  notebook_sessions.py  resource_monitor.py  shared_folder.py
docker/: Dockerfile.python
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  monaco-setup.ts  vite-env.d.ts
frontend/src/components/: AnimatedTitle.tsx  CellOutput.tsx  ClusterPanel.tsx  NotebookCell.tsx  NotebookView.tsx  ResizeHandle.tsx  Sidebar.tsx  ThemeToggle.tsx  Toolbar.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: notebookStore.ts  themeStore.ts
kernels/docker/cpp/: Dockerfile
kernels/docker/dotnet/: Dockerfile
kernels/docker/go/: Dockerfile
kernels/docker/java/: Dockerfile
kernels/docker/julia/: Dockerfile
kernels/docker/node/: Dockerfile
kernels/docker/python/: Dockerfile
kernels/docker/r/: Dockerfile
kernels/docker/rust/: Dockerfile
scripts/: build_kernels.ps1  build_kernels.sh  setup_node.ps1
