[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mbmbook"
version = "0.1.0"
description = "MBM Book - Distributed Multi-Language Notebook Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.6",
    "psutil>=5.9",
    "GPUtil>=1.4",
    "httpx>=0.26",
    "aiofiles>=23.2",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.2",
    "mypy>=1.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
